# SocketChat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: client.cpp  clients_handler.cpp  clients_handler.h  server.cpp
